Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint_Rules__c/SMAX_PS_Complaint_Rules__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Complaint Rules, per &quot;Super Business Unit&quot; (DAS, DX)</description>
    <label>SMAX Complaint Rules</label>
</CustomObject>