Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint_Rules__c/fields/SMAX_PS_Condition_Fault_Code_Com_Reqd__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Condition_Fault_Code_Com_Reqd__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This Condition indicates that any of the non Problem Code Fault Codes (Action, Completion, Installation) are selected which have &quot;Complaint Required&quot; checked will enable the Complaint Validations.</description>
    <inlineHelpText>This Condition indicates that any of the non Problem Code Fault Codes (Action, Completion, Installation) are selected which have &quot;Complaint Required&quot; checked will enable the Complaint Validations.</inlineHelpText>
    <label>Condition: Fault Code Complaint Reqd</label>
    <type>Checkbox</type>
</CustomField>