Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint_Rules__c/fields/SMAX_PS_Condition_HSI_Yes__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Condition_HSI_Yes__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This Condition indicates that an answer of Yes to any HSI Question will enable the Complaint Validations.</description>
    <inlineHelpText>This Condition indicates that an answer of Yes to any HSI Question will enable the Complaint Validations.</inlineHelpText>
    <label>Condition: HSI Yes</label>
    <type>Checkbox</type>
</CustomField>