Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint_Rules__c/fields/SMAX_PS_Condition_Manual_Complaint__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Condition_Manual_Complaint__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This Condition indicates that a Manual Complaint (Priority=Complaint) will enable the Complaint Validations.</description>
    <inlineHelpText>This Condition indicates that a Manual Complaint (Priority=Complaint) will enable the Complaint Validations.</inlineHelpText>
    <label>Condition: Manual Complaint</label>
    <type>Checkbox</type>
</CustomField>