Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint_Rules__c/fields/SMAX_PS_Condition_Medical_Device__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Condition_Medical_Device__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Condition indicates that the Installed Product &quot;Is Medical Device&quot; will enable the Complaint Validations.</description>
    <inlineHelpText>This Condition indicates that the Installed Product &quot;Is Medical Device&quot; will enable the Complaint Validations.</inlineHelpText>
    <label>Condition: Medical Device</label>
    <type>Checkbox</type>
</CustomField>