Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint_Rules__c/fields/SMAX_PS_Condition_Restrict_PC_Com_Reqd__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Condition_Restrict_PC_Com_Reqd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Condition, when NOT checked, indicates that if the selected Problem Code &quot;Is Complaint Required&quot; will enable the Complaint Validations. When it IS checked, the other &quot;Restrict PC&quot; fields are required, and the selected Problem Code is only validated when the Group and Indicators match the WO.</description>
    <inlineHelpText>This Condition, when NOT checked, indicates that if the selected Problem Code &quot;Is Complaint Required&quot; will enable the Complaint Validations. When it IS checked, the other &quot;Restrict PC&quot; fields are required, and the selected Problem Code is only validated w</inlineHelpText>
    <label>Condition: Restrict PC Complaint Reqd</label>
    <type>Checkbox</type>
</CustomField>