Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint_Rules__c/fields/SMAX_PS_Condition_Restrict_PC_Group__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Condition_Restrict_PC_Group__c</fullName>
    <description>The Problem Group that must be selected to validate the Problem Code.</description>
    <inlineHelpText>The Problem Group that must be selected to validate the Problem Code.</inlineHelpText>
    <label>Condition: Restrict PC Group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>