Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint_Rules__c/fields/SMAX_PS_Condition_Restrict_PC_Indicators__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Condition_Restrict_PC_Indicators__c</fullName>
    <description>The Work Order Indicator Field API Name(s) that must evaluate to TRUE to validate the Problem Code.</description>
    <inlineHelpText>The Work Order Indicator Field API Name(s) that must evaluate to TRUE to validate the Problem Code.</inlineHelpText>
    <label>Condition: Restrict PC Indicators</label>
    <length>255</length>
    <type>Text</type>
</CustomField>