Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint_Rules__c/fields/SMAX_PS_Validation_Guidance_Not_Blank__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Validation_Guidance_Not_Blank__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates that the Guidance Answers must not be blank.
Enforced during WO Complete, only if one or more of the conditions was met.</description>
    <inlineHelpText>Indicates that the Guidance Answers must not be blank.
Enforced during WO Complete, only if one or more of the conditions was met.</inlineHelpText>
    <label>Validation: Guidance Not Blank</label>
    <type>Checkbox</type>
</CustomField>