Perkin-UAT/force-app/main/default/objects/SMAX_PS_Complaint_Rules__c/fields/SMAX_PS_Validation_Regulatory_Answered__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Validation_Regulatory_Answered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Regulatory Answers must be either a Yes or No, regardless of HSI.
Enforced during WO Complete, only if one or more of the conditions was met.</description>
    <inlineHelpText>Indicates that the Regulatory Answers must be either a Yes or No, regardless of HSI.
Enforced during WO Complete, only if one or more of the conditions was met.</inlineHelpText>
    <label>Validation: Regulatory Answered</label>
    <type>Checkbox</type>
</CustomField>